# rules_elm

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  flake.nix  renovate.json  rules_nixpkgs_core.patch
.bcr/: config.yml  metadata.template.json
.github/workflows/: release.yml  release_prep.sh  workflow.yaml
docs/: BUILD.bazel  elm_defs.md  repo_rules.md  rules.md  toolchain.md
elm/: BUILD.bazel  compile.py  def.bzl  defs.bzl  dependencies.bzl  deps.bzl  extensions.bzl  generate_test_main.py  repositories.bzl  run_test.js
elm/private/: BUILD.bazel  common.bzl  compile.py  elm_binary.bzl  elm_library.bzl  elm_package.bzl  elm_test.bzl  elm_toolchain.bzl  elm_toolchain_repo.bzl  providers.bzl
elm/toolchain/: BUILD.bazel
examples/: .bazelrc  BUILD.bazel  WORKSPACE  defs.bzl  output_match_runner.sh  shell.nix
examples/elm-binary/: .bazelrc  BUILD.bazel  MODULE.bazel  Main.elm  WORKSPACE  WORKSPACE.bzlmod  nixpkgs.nix  rules_nixpkgs_core.patch
examples/elm-binary/nix-toolchains/: BUILD.bazel
examples/elm-proto/: .bazelrc  BUILD.bazel  MODULE.bazel  Spec.elm  WORKSPACE  WORKSPACE.bzlmod  book.proto  elm_protoc_utils_elm_json.patch
examples/elm-proto/foo/: BUILD.bazel  Spec.elm  foo.proto
examples/elm-proto/nix-toolchains/: BUILD.bazel  proto_deps.bzl
examples/elm-proto/toolchains/: BUILD.bazel
examples/elm-test/: .bazelrc  BUILD.bazel  Lib.elm  MODULE.bazel  Main.elm  Spec.elm  WORKSPACE  WORKSPACE.bzlmod  nixpkgs.json
examples/elm-todomvc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  elm.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/elm-todomvc/nix-toolchains/: BUILD.bazel
examples/elm-todomvc/src/: App.elm  Main.elm
examples/main-no-deps/: BUILD.bazel  MODULE.bazel  Main.elm  WORKSPACE
nix/: bazel7.nix  nixpkgs.nix  nixpkgsWithOverlay.nix
nix/overlays/: bazel.nix  bazel7.nix
patches/: rules_js.patch
proto/: BUILD.bazel  def.bzl  def2.bzl  defs.bzl  elm_grpc_library.bzl  elm_proto_compile.bzl  elm_proto_library.bzl  elm_proto_toolchain_rule.bzl  generic_elm_proto_library.bzl
repository/: BUILD.bazel  BUILD.bazel.elm_library.tpl  BUILD.bazel.elm_package.tpl  def.bzl  defs.bzl  generate_build_files.py
tools/gzip/: BUILD.bazel  gzip.py
tools/npm/: BUILD.bazel  package.json  pnpm-lock.yaml
tools/protoc-gen-elm/: BUILD.bazel
tools/tests-finder/: BUILD.bazel  main.js
tools/tests-placeholder-repairer/: BUILD.bazel  main.js
tools/tests-runner/: BUILD.bazel  main.js
tools/uglifyjs/: BUILD.bazel
