filegroup(
    name = "local_repository_files",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//proto:all_files",
        "//elm:all_files",
        "//elm/private:all_files",
        "//elm/toolchain:all_files",
        "//repository:all_files",
    ],
    visibility = ["//visibility:public"],
)
