load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@protobuf//bazel/toolchains:proto_lang_toolchain.bzl", "proto_lang_toolchain")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

proto_lang_toolchain(
    name = "default_elm_proto_toolchain",
    command_line = "--elm_out=%s",
    plugin = "@rules_elm//tools/protoc-gen-elm:bin",
    plugin_format_flag = "--plugin=protoc-gen-elm=%s",
    progress_message = "Generating Elm proto_library %{label}",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//elm/private:providers",
        "@bazel_skylib//lib:paths",
        "@protobuf//bazel/common:proto_common_bzl", # keep
        "@protobuf//bazel/common:proto_info_bzl", # keep
    ],
)

bzl_library(
    name = "elm_proto_toolchain_rule",
    srcs = ["elm_proto_toolchain_rule.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//bazel/common:proto_common_bzl", # keep
        "@rules_elm//elm/private:providers",
        "@rules_elm//proto:defs",
    ],
)
