load("@com_github_edschouten_rules_elm//elm/private:elm_toolchain.bzl", "elm_toolchain")

elm_toolchain(
    name = "linux",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

elm_toolchain(
    name = "mac",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
