load("@com_github_edschouten_rules_elm//elm/private:elm_toolchain.bzl", "elm_toolchain")

elm_toolchain(
    name = "linux_x86",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

elm_toolchain(
    name = "mac_x86",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

elm_toolchain(
    name = "mac_arm64",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
