load("@rules_elm//elm:defs.bzl", "elm_binary")

elm_binary(
    name = "main",
    main = "Main.elm",
    deps = [
        "@elm_package_elm_core",
        "@elm_package_elm_json",
        "@elm_package_elm_html",
        "@elm_package_elm_virtual_dom",
    ],
)

elm_binary(
    name = "main-no-deps",
    main = "Main.elm",
    deps = [],
)
