load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_elm//elm:defs.bzl", "elm_test")
load(
    "@rules_elm//proto:defs.bzl",
    "INCOMPATIBLE_ENABLE_PROTO_TOOLCHAIN_RESOLUTION",
    "elm_proto_library",
)
load("//nix-toolchains:proto_deps.bzl", "elm_proto_deps")

proto_library(
    name = "book_proto",
    srcs = ["book.proto"],
    visibility = ["//visibility:public"],
)

elm_proto_library(
    name = "elm_book_proto",
    plugin_opt_json = "" if INCOMPATIBLE_ENABLE_PROTO_TOOLCHAIN_RESOLUTION else "json=decode",
    proto = ":book_proto",
    # for bazel6 compatibility
    deps = [] if INCOMPATIBLE_ENABLE_PROTO_TOOLCHAIN_RESOLUTION else elm_proto_deps,
)

elm_test(
    name = "spec",
    main = "Spec.elm",
    deps = [
        ":elm_book_proto",
        "@elm_package_elm_test",
    ],
)
