load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_elm//elm:defs.bzl", "elm_test")
load(
    "@rules_elm//proto:defs.bzl",
    "elm_proto_library",
)

proto_library(
    name = "book_proto",
    srcs = ["book.proto"],
    visibility = ["//visibility:public"],
)

elm_proto_library(
    name = "elm_book_proto",
    proto = ":book_proto",
)

elm_test(
    name = "spec",
    main = "Spec.elm",
    deps = [
        ":elm_book_proto",
        "@elm_package_elm_test",
    ],
)
