bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_nixpkgs_core", version = "0.11.1")
bazel_dep(name = "rules_nodejs", version = "6.1.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc4")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "23.1", dev_dependency = True, repo_name = "com_google_protobuf")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")

nix_repo.github(
    name = "nixpkgs",
    commit = "cfd6b5fc90b15709b780a5a1619695a88505a176",
)
use_repo(nix_repo, "nixpkgs")

nix_pkg.attr(
    name = "nixpkgs_nodejs",
    attr = "nodejs",
    repo = "@nixpkgs",
)

nix_pkg.attr(
    name = "nixpkgs_protobuf",
    attr = "protobuf",
    repo = "@nixpkgs",
)

use_repo(
    nix_pkg,
    "nixpkgs_nodejs",
    "nixpkgs_protobuf",
)

register_toolchains(
    "//:nixpkgs_nodejs_toolchain",
    "//:nixpkgs_elm_protobuf_toolchain",
    "//:nixpkgs_protobuf_toolchain",
)

