module(
    name = "elm-proto",
    version = "1.0",
)

bazel_dep(name = "rules_elm")
local_path_override(
    module_name = "rules_elm",
    path = "../..",
)

bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_nixpkgs_core", version = "0.12.0")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")

elm = use_extension("@rules_elm//elm:extensions.bzl", "elm")
elm.repository(
    name = "elm_package_eriktim_elm_protocol_buffers",
    sha256 = "e929bc551ca939bcca2855ed2560930415b60f1101c0c2e8accfc26eedb51413",
    strip_prefix = "elm-protocol-buffers-1.2.0",
    urls = ["https://github.com/eriktim/elm-protocol-buffers/archive/refs/tags/1.2.0.tar.gz"],
)
elm.repository(
    name = "elm_package_anmolitor_elm_protoc_types",
    sha256 = "e12f17d9a746de19c0bd530bd72de616b86307a10d82639fee194c268516848a",
    strip_prefix = "elm-protoc-types-2.0.0",
    urls = ["https://github.com/anmolitor/elm-protoc-types/archive/refs/tags/2.0.0.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_file",
    sha256 = "c85b4025e12c1bf2dee9e4d853459ead7d1fa917304adfa2af27d116c86292e6",
    strip_prefix = "file-1.0.5",
    urls = ["https://github.com/elm/file/archive/1.0.5.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_http",
    sha256 = "619bc23d7753bc172016ea764233dd7dfded1d919263c41b59885c5bcdd10b01",
    strip_prefix = "http-2.0.0",
    urls = ["https://github.com/elm/http/archive/2.0.0.tar.gz"],
)
elm.repository(
    name = "elm_package_anmolitor_elm_protoc_utils",
    sha256 = "4dad004fca078f677ee8a4a01eeb4f74816f278d076d8bb37a5fe7cc7bf60223",
    strip_prefix = "elm-protoc-utils-2.3.0",
    urls = ["https://github.com/anmolitor/elm-protoc-utils/archive/refs/tags/2.3.0.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_parser",
    sha256 = "2294a3274ee08fdb6fec78983c00d71f9516e53e175a3f7d7abc9eba76ee6c28",
    strip_prefix = "parser-1.1.0",
    urls = ["https://github.com/elm/parser/archive/refs/tags/1.1.0.tar.gz"],
)
elm.repository(
    name = "elm_package_rtfeldman_elm_iso8601_date_strings",
    sha256 = "2a2ce3d4c3bbfa21b66610d8fa6652feac0f37a6ded7c482df8f45ff664804aa",
    strip_prefix = "elm-iso8601-date-strings-1.1.4",
    urls = ["https://github.com/rtfeldman/elm-iso8601-date-strings/archive/refs/tags/1.1.4.tar.gz"],
)
elm.repository(
    name = "elm_package_danfishgold_base64_bytes",
    sha256 = "413ede3c324c666b3d4812c4b1756f9ce4fa1f9b9c5bc60922fd7e920f9e84f7",
    strip_prefix = "base64-bytes-1.1.0",
    urls = ["https://github.com/danfishgold/base64-bytes/archive/1.1.0.tar.gz"],
)
elm.repository(
    name = "elm_package_anmolitor_elm_protocol_buffers",
    sha256 = "e929bc551ca939bcca2855ed2560930415b60f1101c0c2e8accfc26eedb51413",
    strip_prefix = "elm-protocol-buffers-1.2.0",
    urls = ["https://github.com/eriktim/elm-protocol-buffers/archive/1.2.0.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_core",
    sha256 = "6e37b11c88c89a68d19d0c7625f1ef39ed70c59e443def95e4de98d6748c80a7",
    strip_prefix = "core-1.0.5",
    urls = ["https://github.com/elm/core/archive/1.0.5.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_json",
    sha256 = "d0635f33137e4ad3fc323f96ba280e45dc41afa51076c53d9f04fd92c2cf5c4e",
    strip_prefix = "json-1.1.3",
    urls = ["https://github.com/elm/json/archive/1.1.3.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_test",
    sha256 = "e199eaa0ea31b61cf3ce521b3b34e9a94d8cce65862062b91a484dcb28935b74",
    strip_prefix = "test-2.1.1",
    urls = ["https://github.com/elm-explorations/test/archive/2.1.1.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_virtual_dom",
    sha256 = "cf87286ed5d1b31aaf99c6a3368ccd340d1356b1973f1afe5f668c47e22b3b60",
    strip_prefix = "virtual-dom-1.0.2",
    urls = ["https://github.com/elm/virtual-dom/archive/1.0.2.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_random",
    sha256 = "b4b9dc99d5a064bc607684dd158199208bce51c0521b7e8a515c365e0a11168d",
    strip_prefix = "random-1.0.0",
    urls = ["https://github.com/elm/random/archive/1.0.0.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_html",
    sha256 = "73b885e0a3d2f9781b1c9bbcc1ee9ac032f503f5ef46a27da3ba617cebbf6fd8",
    strip_prefix = "html-1.0.0",
    urls = ["https://github.com/elm/html/archive/1.0.0.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_time",
    sha256 = "e18bca487adec67bfe4043a33b975d81527a7732377050d0421dd86d503c906d",
    strip_prefix = "time-1.0.0",
    urls = ["https://github.com/elm/time/archive/1.0.0.tar.gz"],
)
elm.repository(
    name = "elm_package_elm_bytes",
    sha256 = "922f3526e3b430e947d1d2eac5965e4caae625013649de2f657d4f258a5bdc0b",
    strip_prefix = "bytes-1.0.8",
    urls = ["https://github.com/elm/bytes/archive/1.0.8.tar.gz"],
)
use_repo(
    elm,
    "elm_package_anmolitor_elm_protoc_types",
    "elm_package_anmolitor_elm_protoc_utils",
    "elm_package_anmolitor_elm_protocol_buffers",
    "elm_package_danfishgold_base64_bytes",
    "elm_package_elm_file",
    "elm_package_elm_http",
    "elm_package_elm_parser",
    "elm_package_eriktim_elm_protocol_buffers",
    "elm_package_rtfeldman_elm_iso8601_date_strings",
    "elm_package_elm_core",
    "elm_package_elm_json",
    "elm_package_elm_test",
    "elm_package_elm_virtual_dom",
    "elm_package_elm_random",
    "elm_package_elm_html",
    "elm_package_elm_bytes",
    "elm_package_elm_time",
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.github(
    name = "nixpkgs",
    commit = "cfd6b5fc90b15709b780a5a1619695a88505a176",
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(
    name = "nixpkgs_nodejs",
    attr = "nodejs",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "nixpkgs_protobuf",
    attr = "protobuf",
    repo = "@nixpkgs",
)
nix_pkg.attr(
    name = "nixpkgs_python3",
    attr = "python3",
    repo = "@nixpkgs",
)
use_repo(
    nix_pkg,
    "nixpkgs_nodejs",
    "nixpkgs_protobuf",
    "nixpkgs_python3",
)

register_toolchains(
    "//nix-toolchains:nixpkgs_nodejs_toolchain",
    "//nix-toolchains:nixpkgs_elm_protobuf_toolchain",
    "//nix-toolchains:nixpkgs_protobuf_toolchain",
    "//nix-toolchains:nixpkgs_python_toolchain",
)
