load("@com_github_edschouten_rules_elm//elm:def.bzl", "elm_library", "elm_test")

elm_library(
    name = "lib",
    srcs = ["Lib.elm"],
    deps = [],
)

elm_library(
    name = "main-lib",
    srcs = ["Main.elm"],
    deps = [
        "@elm_package_elm_browser",
        "@elm_package_elm_http",
    ],
)

elm_test(
    name = "spec",
    main = "Spec.elm",
    node = "@nodejs//:bin/node",
    deps = [
        ":lib",
        ":main-lib",
        "@elm_package_elm_core",
        "@elm_package_elm_json",
        "@elm_package_elm_test",
        "@elm_package_elm_bytes",
        "@elm_package_elm_random",
        "@elm_package_elm_virtual_dom",
        "@elm_package_elm_html",
        "@elm_package_elm_time",
    ],
)
