load("@rules_elm//elm:def.bzl", "elm_library", "elm_test")
load("@rules_nodejs//nodejs:toolchain.bzl", "nodejs_toolchain")

nodejs_toolchain(
    name = "node_toolchain",
    node = "@nixpkgs_nodejs//:bin/node",
    npm = "@nixpkgs_nodejs//:bin/npm",
)

toolchain(
    name = "nixpkgs_nodejs_toolchain",
    exec_compatible_with = [ "@rules_nixpkgs_core//constraints:support_nix" ],
    toolchain = ":node_toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

elm_library(
    name = "lib",
    srcs = ["Lib.elm"],
    deps = [],
)

elm_library(
    name = "main-lib",
    srcs = ["Main.elm"],
    deps = [
        "@elm_package_elm_browser",
        "@elm_package_elm_http",
    ],
)

elm_test(
    name = "spec",
    main = "Spec.elm",
    deps = [
        ":lib",
        ":main-lib",
        "@elm_package_elm_core",
        "@elm_package_elm_json",
        "@elm_package_elm_test",
        "@elm_package_elm_bytes",
        "@elm_package_elm_random",
        "@elm_package_elm_virtual_dom",
        "@elm_package_elm_html",
        "@elm_package_elm_time",
    ],
    size="small",
)
